--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ if (NOT PICO_PROGRAM_MAIN_ENTRY)
 
 
 	# If multi-segment is used and it's reversed, set this option to ON to enable reversing
-	set(SECOND_SEGMENT_REVERSED OFF)
+	set(SECOND_SEGMENT_REVERSED ON)
 
 	# User configuration section ends here
 	# Usually you don't need to change anything below this section
